<resources>

    <string name="app_name">MILKFLO</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="laclist">Lactation Log</string>
    <string name="milestones">Milestones</string>
    <string name="m1">Cooing/Noise Making</string>
    <string name="m2">Begins to Smile at People</string>
    <string name="m3">Turns Head Towards Sounds</string>
    <string name="m4">Begins Following Things with Eyes</string>
    <string name="m5">Begin to Hold Their Head Up</string>
    <string name="m6">Begins to Babble</string>
    <string name="m7">Begins Reaching for Things</string>
    <string name="m8">Begins Responding to Affection</string>
    <string name="m9">Recognizes Familiar Things at a Distance</string>
    <string name="m10">Holds Their Head Steady, Unsupported</string>
    <string name="m11">Likes Playing with Others</string>
    <string name="m12">Showing More Curiosity Towards Things</string>
    <string name="m13">Passing Things From One Hand to the Other</string>
    <string name="m14">Rolling Over</string>
    <string name="m15">Sitting Up Without Support</string>
    <string name="m16">Stands While Holding On</string>
    <string name="m17">Pulls Themselves Up on Their Feet</string>
    <string name="m18">Crawling Backward</string>
    <string name="m19">Crawling Forward</string>
    <string name="m20">Walking Without Support</string>
    <string name="comment">Write a comment…</string>
    <string name="lactation_log">Lactation Log</string>
    <string name="today">Today</string>
    <string name="back_button">Back Button</string>
    <string name="calendarlactationlog">Calendar</string>
    <string name="tablelactationlog">Table</string>
    <string name="addbutton">Add</string>
    <string name="editlactationlog">Edit</string>
    <string name="new_entry_lactation_log">New Entry</string>
    <string name="string_new_entry_lactation_log" />
    <string name="string_string_new_entry_lactation_log">New Entry</string>
    <string name="timenewentry">24-Hour Time</string>
    <string name="datenewentry">Date</string>
    <string name="left_side_new_entry">Left Side</string>
    <string name="right_side_new_entry">Right Side</string>
    <string name="cancelNewEntry">Cancel</string>
    <string name="addNewEntry">Add</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="timeEditEntry">Time</string>
    <string name="dateEditEntry">Date</string>
    <string name="left_sideEditEntry">Left Side</string>
    <string name="right_sideEditEntry">Right Side</string>
    <string name="cancelEditEntry">Cancel</string>
    <string name="confirmEditEntry">Confirm</string>
    <string name="profile">Profile</string>
    <string name="my_infoProfile">My Info</string>
    <string name="notificationsProfile">Notifications</string>
    <string name="completed_milestonesProfile">Completed Milestones</string>
    <string name="logoutProfile">Logout</string>
    <string name="back">Back</string>
    <string name="prev">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="new_account">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="signOut">Sign Out</string>
    <string name="homeTitle">Home</string>
    <string name="latest_lactation_entry">Latest Lactation Entry</string>
    <string name="calendartext">Select A Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>