<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="#8C3DCA">

    <TextView
        android:id="@+id/newAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:text="@string/new_account"
        />

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/newAccountText"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divide"
        android:background="@color/white">

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:hint="@string/firstName"
            android:minHeight="48dp"
            android:textColor="#8C3DCA" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNameText"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:hint="@string/lastName"
            android:minHeight="48dp"
            android:textColor="#8C3DCA" />

        <EditText
            android:id="@+id/ageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastNameText"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:hint="@string/age"
            android:minHeight="48dp"
            android:textColor="#8C3DCA" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageText"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:textColor="#8C3DCA" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailText"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:textColor="#8C3DCA" />

        <Button
            android:id="@+id/loginCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordText"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="45dp"
            android:background="#8C3DCA"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <Button
            android:id="@+id/confirmCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginCA"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="45dp"
            android:background="#8C3DCA"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="24dp" />

    </RelativeLayout>

</RelativeLayout>
