<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8C3DCA">

    <TextView
        android:id="@+id/laclistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/laclist"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <Button
        android:id="@+id/backButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/laclistText"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:drawableBottom="?attr/homeAsUpIndicator"
        android:text="@string/prev"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/laclistText"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/backButton"
        android:text="MM/DD/YY"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <ImageButton
        android:id="@+id/calendarButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_below="@id/laclistText"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/calendarlactationlog"
        app:srcCompat="@android:drawable/ic_menu_today" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/addButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/addbutton" />

    <Button
        android:id="@+id/editButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="84dp"
        android:layout_height="67dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/editlactationlog"
        tools:ignore="TextContrastCheck" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="15dp"
        android:background="@color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/timeEditEntry"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/left_side_new_entry"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/right_side_new_entry"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </TableRow>

        <ScrollView
            android:id="@+id/lacListScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/laclogList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableLayout>

        </ScrollView>

    </TableLayout>

</RelativeLayout>