<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".my_info"
    android:background="#8C3DCA">

    <TextView
        android:id="@+id/myInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:text="@string/my_infoProfile"
        />

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/myInfoText"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divide"
        android:background="@color/white">

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/firstName"
            android:textSize="28sp"
            android:textColor="#8C3DCA" />

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNameTextView"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/lastName"
            android:textSize="28sp"
            android:textColor="#8C3DCA" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastNameTextView"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/age"
            android:textSize="28sp"
            android:textColor="#8C3DCA" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageTextView"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/email"
            android:textSize="28sp"
            android:textColor="#8C3DCA" />

    </RelativeLayout>

</RelativeLayout>
