<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8C3DCA">



    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="330dp"
        android:layout_height="355dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/milkflologo">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top|center"
        android:layout_marginStart="138dp"
        android:layout_marginTop="-1dp"
        android:gravity="center"
        android:text="@string/homeTitle"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/latestlactationentry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/latest_lactation_entry"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TableLayout
        android:layout_width="397dp"
        android:layout_height="127dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp"
        android:background="@color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/timeEditEntry"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/left_side_new_entry"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/right_side_new_entry"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </TableRow>

        <TableLayout
            android:id="@+id/laclogListHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableLayout>

    </TableLayout>

</RelativeLayout>